--- a/src/App.css
+++ b/src/App.css
@@ -5,20 +5,18 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
+.pompompurin {
+  height: 100%;
   padding: 1.5em;
   will-change: filter;
   transition: filter 300ms;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.pompompurin:hover {
+  filter: drop-shadow(0 0 2em #e9b310aa);
+  animation: pompompurin-spin infinite 1.5s linear;
 }
 
-@keyframes logo-spin {
+@keyframes pompompurin-spin {
   from {
     transform: rotate(0deg);
   }
@@ -28,15 +26,7 @@
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+  a:nth-of-type(2) .pompompurin {
+    animation: pompompurin-spin infinite 20s linear;
   }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
